--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -1,4 +1,4 @@
-name: Mirror CSAPP
+name: Mirror CSAPP (Safe)
 
 on:
   workflow_dispatch:
@@ -6,20 +6,32 @@ on:
 jobs:
   mirror:
     runs-on: ubuntu-latest
+    timeout-minutes: 30
 
     steps:
-      - name: Update system
-        run: sudo apt-get update
-
       - name: Install tools
-        run: sudo apt-get install -y wget tar
+        run: sudo apt-get update && sudo apt-get install -y wget tar
 
-      - name: Download CSAPP site
+      - name: Download CSAPP (polite mode)
         run: |
-          wget -r -l inf -k -E -p -np http://csapp.cs.cmu.edu/
-          tar -czf csapp-site.tar.gz csapp.cs.cmu.edu
+          wget \
+            --recursive \
+            --level=5 \
+            --page-requisites \
+            --html-extension \
+            --convert-links \
+            --no-parent \
+            --wait=1 \
+            --limit-rate=300k \
+            --retry-connrefused \
+            --tries=10 \
+            --timeout=30 \
+            http://csapp.cs.cmu.edu/
 
-      - name: Upload result
+      - name: Archive
+        run: tar -czf csapp-site.tar.gz csapp.cs.cmu.edu
+
+      - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: csapp-site
